--- a/src/pages/education/Education.css
+++ b/src/pages/education/Education.css
@@ -1,9 +1,3 @@
-.education {
-    background-color:white;
-    width:90vw;
-    margin:auto;
-}
-
 .educationContent {
     width:100vw;
     min-height:81vh;
